added styles and logic

--- a/index.html
+++ b/index.html
@@ -5,8 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Page</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    
+    <section>
+        <div class="main">
+            <img src="./assets/images/google.png" alt="logo">
+            <div class="searchbox">
+                <input type="text" class="query" value="" placeholder="Search Google or type a URL">
+                <div class="icons">
+                    <div><img src="./assets/images/search.png" alt="search btn"></div>
+                    <div><img src="./assets/images/mic.png" alt="mic icon"></div>
+                </div>
+            </div>
+            <div class="button">
+                <button class="searchbtn">Google Search</button>
+                <button class="searchbtn">I'm Feeling Lucky</button>
+            </div>
+        </div>
+    </section>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
